--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
             margin-right: 6px;
         }
     </style>
+    <!-- أضف مكتبة Firebase قبل أي كود يستخدمها -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
 <body>
         <div id="splash" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:#fff;z-index:9999;display:flex;align-items:center;justify-content:center;">
@@ -313,7 +316,15 @@ function clearLocalData() {
             // حفظ في Firebase
             if (db) {
                 // استخدم رقم الهاتف كمفتاح فريد
-                db.ref('users/' + user.phone).set(user);
+                db.ref('users/' + user.phone).set(user, function(error) {
+                    if (error) {
+                        alert('حدث خطأ أثناء حفظ البيانات في قاعدة البيانات: ' + error.message);
+                    } else {
+                        alert('تم حفظ بياناتك بنجاح في قاعدة البيانات!');
+                    }
+                });
+            } else {
+                alert('تعذر الاتصال بقاعدة بيانات Firebase. يرجى التأكد من توفر الاتصال.');
             }
         }
         function findUser(name, phone) {
